# automacaoChatGuru

./: base.resource  log.html  output.xml  pyproject.toml  report.html  resources.robot  testes.robot
log/: log.html  output.xml  report.html
resource/actions/: given.resource  then.resource  when.resource
resource/locators/: alertMessages.resource  attachLocators.resource  chatLocators.resource  homeLocators.resource  loginLocators.resource
resource/utils/: customKeywords.resource
src/img/: teste.heic  teste.tif
src/txt/: txt.docx  txt.txt
test/: ChatGuru.robot  Sikuli_java_stdout_1719530383.2564027.txt  log.html  output.xml  report.html
